# LLM-Runner

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
model_configuration_files/: llamaConfig.json  llamaConfig.txt  llamaTextConfig.json  llamaVisionConfig-qwen2-vl-2B.json  llamaVisionConfig.json  mediapipeTextConfig.json  onnxrtConfig.json  onnxrtTextConfig.json
scripts/cmake/: check-flag.cmake  configuration-options.cmake  configuration-presets.json  download-resources.cmake  find-catch.cmake  find-java.cmake  find-jni.cmake  find_json.cmake  llama-cpp-backends.cmake  llama-cpp-workaround.cmake  streamline.cmake
scripts/cmake/toolchains/: aarch64-base.cmake  aarch64.cmake  base.cmake  native.cmake  toolchain-presets.json
scripts/dev/: check_framework_updates.py  collect_debug_bundle.py  collect_debug_bundle.sh  framework_versions.py  llm_doctor.py
scripts/py/: download_resources.py  requirements.json
scripts/py/toolchain/: BUILD
skills/: README.md
skills/llm-add-model-support/: SKILL.md
skills/llm-add-model-support/references/: backend-notes.md  new-model-checklist.md  output-validation.md
skills/llm-add-model-support/scripts/: assert_config_listed.py  sha256_file.py
skills/llm-android-cross-build/: SKILL.md
skills/llm-backend-scaffold/: SKILL.md
skills/llm-backend-scaffold/references/: backend-integration-checklist.md
skills/llm-benchmark-workflow/: SKILL.md
skills/llm-benchmark-workflow/references/: bench-notes.md
skills/llm-benchmark-workflow/scripts/: bench_smoke.py
skills/llm-build-and-ctest/: SKILL.md
skills/llm-build-and-ctest/references/: ctest-triage.md
skills/llm-build-and-ctest/scripts/: run_build_and_ctest.py
skills/llm-change-api-safely/: SKILL.md
skills/llm-change-api-safely/references/: api-change-checklist.md
skills/llm-code-review/: SKILL.md
skills/llm-config-schema-change/: SKILL.md
skills/llm-debug-test-failures/: SKILL.md
skills/llm-debug-test-failures/scripts/: rerun_failing_ctest.py
skills/llm-jni-smoke/: SKILL.md
skills/llm-session-start/: SKILL.md
skills/llm-session-start/references/: upgrade-triage.md  what-it-checks.md  wrapper-alias.md
skills/llm-session-start/scripts/: start.py
skills/llm-update-downloads/: SKILL.md
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt  Llm.cpp  LlmJni.cpp
src/cpp/benchmark/: LlmBenchmark.cpp  LlmBenchmark.hpp  main.cpp
src/cpp/chat/: LlmChat.cpp  LlmChat.hpp
src/cpp/config/: CMakeLists.txt  LlmConfig.cpp  LlmConfig.hpp
src/cpp/frameworks/llama_cpp/: CMakeLists.txt  LlamaImpl.cpp  LlamaTextImpl.cpp  LlamaTextImpl.hpp  LlamaVisionImpl.cpp  LlamaVisionImpl.hpp  LlmFactory.cpp  LlmFactory.hpp  LlmImpl.hpp
src/cpp/frameworks/mediapipe/: CMakeLists.txt  LlmFactory.cpp  LlmFactory.hpp  LlmImpl.hpp  MediaPipeImpl.cpp
src/cpp/frameworks/mnn/: MnnImpl.cpp
src/cpp/frameworks/onnxruntime_genai/: CMakeLists.txt  LlmFactory.cpp  LlmFactory.hpp  LlmImpl.hpp  OnnxrtImpl.cpp
src/cpp/include/: LLM.hpp
src/cpp/interface/: Llm.hpp
src/cpp/llama_cpp/: CMakeLists.txt
src/cpp/llama_cpp/include/: LlamaImpl.hpp
src/cpp/llama_cpp/jni/: Llama.cpp
src/cpp/log/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/cpp/profiling/: StreamlineLlm.hpp
src/java/: CMakeLists.txt
src/java/com/arm/: Llm.java
src/java/com/arm/llm/: Llama.java  LlamaConfig.java
test/: CMakeLists.txt
test/cpp/: LLamaTest.cpp  LlmConfigTest.cpp  LlmImplFactoryTest.cpp  LlmLogTest.cpp  LlmTest.cpp  LlmUtils.cpp  LlmUtils.hpp
test/java/com/arm/: LlamaTestJNI.java  LlmTestJNI.java
test/test_resources/: files.md
